--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -76,6 +76,7 @@ services:
       # Use Docker volumes only (Portainer/K8s compatible)
       - logos_data:/app/data:z
       - logos_logs:/app/logs:z
+      - logos_model_cache:/tmp/fastembed_cache:z
     networks:
       - logos-network
     healthcheck:
@@ -171,6 +172,8 @@ volumes:
   logos_data:
     driver: local
   logos_logs:
+    driver: local
+  logos_model_cache:
     driver: local
   ollama_data:
     driver: local
