--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -76,7 +76,7 @@ services:
       # Use Docker volumes only (Portainer/K8s compatible)
       - logos_data:/app/data:z
       - logos_logs:/app/logs:z
-      - logos_model_cache:/tmp/fastembed_cache:z
+      - logos_model_cache:/app/cache:z
     networks:
       - logos-network
     healthcheck:
