fix: Resolve Docker deployment inconsistencies and image management
- Fix image tagging: Unified logos:latest across all docker-compose files
- Add build instructions: Enabled local building with proper context paths
- Fix service detection: Added container_name for consistent manage.sh detection
- Clean up duplicate images: Removed logos-minimal and logos-final variants
- Improve health checks: Increased start_period to 300s for model loading
- Add cache configuration: FASTEMBED_CACHE_DIR environment variable
- Optimize volume mounting: Proper cache directory persistence

This resolves multiple Docker issues:
- Service detection failures in manage.sh
- Image inconsistency between regular/Portainer compose files
- Slow startup due to model download timeouts
- Multiple conflicting image variants
- Cache directory permission issues

Now provides single optimized logos:latest image with reliable deployment.

--- a/deploy/docker/docker-compose.portainer.yml
+++ b/deploy/docker/docker-compose.portainer.yml
@@ -48,10 +48,11 @@ services:
 
   # Main Logos MCP Server
   logos-mcp:
-    image: logos-minimal:latest  # Use pre-built image for Portainer
-    # build:  # Uncomment for local builds in Portainer
-    #   context: ..
-    #   dockerfile: Dockerfile
+    build:
+      context: ../..
+      dockerfile: Dockerfile
+    image: logos:latest
+    container_name: logos-mcp-server
     depends_on:
       - qdrant
     ports:
