fix: Qdrant health check stabilization issues
- Increase Qdrant health check start_period from 40s to 90s
- Change health check URL from localhost to 127.0.0.1 for container networking
- Increase timeout from 10s to 15s and retries from 3 to 5
- Add QDRANT__SERVICE__ENABLE_STATIC_CONTENT=1 for better health reporting
- Increase logos-mcp start_period to 400s to wait for Qdrant
- Add service_healthy condition to depends_on for proper startup sequencing

This fixes the 'starting' status issue where Qdrant health checks
were timing out before the service was fully ready.

--- a/deploy/docker/docker-compose.portainer.yml
+++ b/deploy/docker/docker-compose.portainer.yml
@@ -22,12 +22,13 @@ services:
       - QDRANT__SERVICE__HTTP_PORT=6333
       - QDRANT__SERVICE__GRPC_PORT=6334
       - QDRANT__LOG_LEVEL=INFO
+      - QDRANT__SERVICE__ENABLE_STATIC_CONTENT=1
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:6333/healthz"]
       interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      timeout: 15s
+      retries: 5
+      start_period: 90s
     labels:
       - "com.docker.compose.project=logos"
       - "logos.service.type=core"
@@ -54,7 +55,8 @@ services:
     image: logos:latest
     container_name: logos-mcp-server
     depends_on:
-      - qdrant
+      qdrant:
+        condition: service_healthy
     ports:
       - "6335:6335"  # MCP API port
     environment:
@@ -100,7 +102,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 300s
+      start_period: 400s
       start_period: 60s
     labels:
       - "com.docker.compose.project=logos"
