--- a/deploy/docker/docker-compose.portainer.yml
+++ b/deploy/docker/docker-compose.portainer.yml
@@ -1,11 +1,10 @@
-version: '3.8'
+version: "3.8"
 
 # Portainer-Optimized Docker Compose Configuration for Logos
 # This file is specifically designed for Portainer stack deployment
 # with enhanced monitoring, logging, and management features
 
 services:
-
   # ==========================================
   # CORE SERVICES (Always Running)
   # ==========================================
@@ -14,8 +13,8 @@ services:
   qdrant:
     image: qdrant/qdrant:latest
     ports:
-      - "6333:6333"  # REST API
-      - "6334:6334"  # gRPC API
+      - "6333:6333" # REST API
+      - "6334:6334" # gRPC API
     volumes:
       - qdrant_storage:/qdrant/storage:z
     environment:
@@ -24,15 +23,17 @@ services:
       - QDRANT__LOG_LEVEL=INFO
       - QDRANT__SERVICE__ENABLE_STATIC_CONTENT=1
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://127.0.0.1:6333/healthz"]
-      interval: 30s
-      timeout: 15s
-      retries: 5
-      start_period: 90s
+      test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
+      interval: 20s
+      timeout: 10s
+      retries: 10
+      start_period: 60s
     labels:
       - "com.docker.compose.project=logos"
       - "logos.service.type=core"
       - "logos.service.role=database"
+    networks:
+      - logos-network
     deploy:
       mode: replicated
       replicas: 1
@@ -58,7 +59,7 @@ services:
       qdrant:
         condition: service_healthy
     ports:
-      - "6335:6335"  # MCP API port
+      - "6335:6335" # MCP API port
     environment:
       # Database Configuration
       - QDRANT_HOST=qdrant
@@ -96,35 +97,42 @@ services:
     volumes:
       - logos_data:/app/data:z
       - logos_logs:/app/logs:z
-      - logos_model_cache:/app/cache:z
+      - logos_model_cache:/app/cache/fastembed:z
     healthcheck:
-      test: ["CMD", "python", "-c", "import socket; s=socket.socket(); s.settimeout(5); s.connect(('127.0.0.1', 6335)); s.close()"]
+      test:
+        [
+          "CMD",
+          "python",
+          "-c",
+          "import socket; s=socket.socket(); s.settimeout(5); s.connect(('127.0.0.1', 6335)); s.close()",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 400s
-      start_period: 60s
+      start_period: 120s
     labels:
       - "com.docker.compose.project=logos"
       - "logos.service.type=core"
       - "logos.service.role=mcp-server"
       - "logos.version=1.1.0"
       - "logos.api.port=6335"
+    networks:
+      - logos-network
     deploy:
       mode: replicated
       replicas: 1
       resources:
         limits:
           memory: 2G
-          cpus: '1.0'
+          cpus: "1.0"
         reservations:
           memory: 1G
-          cpus: '0.5'
+          cpus: "0.5"
       restart_policy:
         condition: on-failure
-        delay: 10s
-        max_attempts: 5
-        window: 300s
+        delay: 30s
+        max_attempts: 3
+        window: 600s
 
   # ==========================================
   # OPTIONAL SERVICES (LLM Providers)
@@ -239,7 +247,6 @@ volumes:
   #   labels:
   #     - "com.docker.compose.project=logos"
   #     - "logos.volume.type=llm-data"
-
 # ==========================================
 # PORTAINER CONFIGURATION NOTES
 # ==========================================
