--- a/deploy/docker/docker-compose.portainer.yml
+++ b/deploy/docker/docker-compose.portainer.yml
@@ -23,7 +23,13 @@ services:
       - QDRANT__LOG_LEVEL=INFO
       - QDRANT__SERVICE__ENABLE_STATIC_CONTENT=1
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
+      test:
+        [
+          "CMD",
+          "bash",
+          "-c",
+          "exec 3<>/dev/tcp/127.0.0.1/6333 && echo -e 'GET /healthz HTTP/1.1\r\nHost: 127.0.0.1\r\n\r\n' >&3 && grep -q '200' <&3",
+        ]
       interval: 10s
       timeout: 10s
       retries: 10
